--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.3.0\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2020-04-16 08:01:35+00:00\n"
+"POT-Creation-Date: 2020-04-20 00:12:09+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3201,144 +3201,90 @@ msgstr ""
 msgid "<span>Native mobile apps by </span><a href=\"%s\">AppBoss</a><span>.</span>"
 msgstr ""
 
-#: bp-core/admin/templates/about-buddyboss.php:26
-msgid "New in BuddyBoss"
-msgstr ""
-
-#: bp-core/admin/templates/about-buddyboss.php:33 bp-core/bp-core-admin.php:22
-msgid "Maintenance Release"
-msgid_plural "Maintenance Releases"
-msgstr[0] ""
-msgstr[1] ""
-
-#: bp-core/admin/templates/about-buddyboss.php:38 bp-core/bp-core-admin.php:34
-#. translators: 1: BuddyPress version number, 2: plural number of bugs.
-msgid "<strong>Version %1$s</strong> addressed %2$s bug."
-msgid_plural "<strong>Version %1$s</strong> addressed %2$s bugs."
-msgstr[0] ""
-msgstr[1] ""
-
-#: bp-core/admin/templates/about-buddyboss.php:53
+#: bp-core/admin/templates/about-buddyboss.php:31
 msgid "Welcome to BuddyBoss Platform"
 msgstr ""
 
-#: bp-core/admin/templates/about-buddyboss.php:54
+#: bp-core/admin/templates/about-buddyboss.php:32
 msgid ""
 "BuddyBoss Platform is a fork of <a href=\"https://buddypress.org/\" "
-"target=\"_blank\">BuddyPress</a>, and is designed to be backwards "
-"compatible with BuddyPress data and most BuddyPress plugins. If you have "
-"been using BuddyPress in the past, you should remove it as this is a full "
+"target=\"_blank\">BuddyPress</a> and <a href=\"https://bbpress.org/\" "
+"target=\"_blank\">bbPress</a>, and is designed to be backwards compatible "
+"with BuddyPress data and most BuddyPress plugins. If you have been using "
+"BuddyPress or bbPress in the past, you should remove them as this is a full "
 "replacement. We have improved almost every aspect of BuddyPress and added "
-"many new features. Below are some highlights, but as you explore you will "
-"find improvements all over the place. Have fun!"
+"many new features. As you explore you will find improvements all over the "
+"place. Have fun!"
 msgstr ""
 
-#: bp-core/admin/templates/about-buddyboss.php:56
-msgid "1. New \"BuddyBoss Theme\""
+#: bp-core/admin/templates/about-buddyboss.php:38
+msgid "Get support for BuddyBoss"
 msgstr ""
 
-#: bp-core/admin/templates/about-buddyboss.php:57
+#: bp-core/admin/templates/about-buddyboss.php:39
 msgid ""
-"BuddyBoss Platform is meant to be theme independent, meaning any generic "
-"WordPress theme can use it, and then a custom theme just makes everything "
-"extra nice. We have created an all new premium BuddyBoss Theme that styles "
-"everything to look absolutely gorgeous. Because we now control the core "
-"plugin framework, we are able to do much more advanced layouts in our theme "
-"than before, and we think you will love the result. If you were previously "
-"using <a href=\"https://www.buddyboss.com/product/boss-theme/\" "
+"We see you are running BuddyBoss Theme, congratulations! If you have an "
+"active theme license, you can access our support ticketing system to get "
+"24/7 support for BuddyBoss Theme and Platform. Sign into <a "
+"href=\"https://www.buddyboss.com/\" target=\"_blank\">BuddyBoss.com</a> "
+"using the email and password created during your purchase, and from there "
+"you can access support tickets, downloads and license keys."
+msgstr ""
+
+#: bp-core/admin/templates/about-buddyboss.php:43
+msgid "Consider the BuddyBoss Theme"
+msgstr ""
+
+#: bp-core/admin/templates/about-buddyboss.php:44
+msgid ""
+"BuddyBoss Platform is theme independent, meaning any generic WordPress "
+"theme can use it, and then a custom theme just makes everything extra nice. "
+"We have created our premium <a href=\"https://www.buddyboss.com/pricing/\" "
+"target=\"_blank\">BuddyBoss Theme</a> that styles everything to look "
+"absolutely gorgeous. Because we now control the core plugin framework, we "
+"are able to do much more advanced layouts in our theme than before, and we "
+"think you will love the result. If you were previously using <a "
+"href=\"https://www.buddyboss.com/product/boss-theme/\" "
 "target=\"_blank\">Boss</a> theme or <a "
 "href=\"https://www.buddyboss.com/product/onesocial-theme/\" "
 "target=\"_blank\">OneSocial</a> theme you should switch to our new theme, "
 "as those legacy themes won't support all of our new layouts."
 msgstr ""
 
-#: bp-core/admin/templates/about-buddyboss.php:59
-msgid "2. Forum Discussions"
+#: bp-core/admin/templates/about-buddyboss.php:48
+msgid "Below are some resources to help you get started:"
 msgstr ""
 
-#: bp-core/admin/templates/about-buddyboss.php:60
+#: bp-core/admin/templates/about-buddyboss.php:50
 msgid ""
-"We have added a native forum discussions component. Your members can now "
-"communicate with each other in Q&A style conversations. If you were "
-"previously using <a href=\"https://bbpress.org/\" "
-"target=\"_blank\">bbPress</a> plugin, you should remove it as those "
-"features have been merged into BuddyBoss Platform and greatly improved. "
-"Your data will continue to work as normal."
+"<a href=\"https://www.buddyboss.com/resources/docs/\" "
+"target=\"_blank\">Documentation</a>"
 msgstr ""
 
-#: bp-core/admin/templates/about-buddyboss.php:62
-msgid "3. Media Uploading"
+#: bp-core/admin/templates/about-buddyboss.php:51
+msgid "<a href=\"https://www.buddyboss.com/roadmap/\" target=\"_blank\">Roadmap</a>"
 msgstr ""
 
-#: bp-core/admin/templates/about-buddyboss.php:63
+#: bp-core/admin/templates/about-buddyboss.php:52
 msgid ""
-"We have added a native media management component. Your members can now "
-"upload photos, emoji, and animated GIFs into profiles, groups, private "
-"messages and forum discussions. They can then organize those photos into "
-"albums. If you were previously using <a "
-"href=\"https://www.buddyboss.com/product/buddyboss-media/\" "
-"target=\"_blank\">BuddyBoss Media</a> plugin with BuddyPress, you should "
-"remove it as those features have been merged into BuddyBoss Platform and "
-"greatly improved."
+"<a "
+"href=\"https://www.buddyboss.com/resources/buddyboss-platform-releases/\" "
+"target=\"_blank\">Release Notes</a>"
+msgstr ""
+
+#: bp-core/admin/templates/about-buddyboss.php:53
+msgid ""
+"<a href=\"https://www.buddyboss.com/resources/reference/\" "
+"target=\"_blank\">Code Reference</a>"
+msgstr ""
+
+#: bp-core/admin/templates/about-buddyboss.php:54
+msgid ""
+"<a href=\"https://github.com/buddyboss/buddyboss-platform/wiki\" "
+"target=\"_blank\">Github</a>"
 msgstr ""
 
 #: bp-core/admin/templates/about-buddyboss.php:65
-msgid "4. Profile and Group Types"
-msgstr ""
-
-#: bp-core/admin/templates/about-buddyboss.php:66
-msgid ""
-"We have added native Profile and Group type management, along with group "
-"heirarchies. If you were previously using <a "
-"href=\"https://www.buddyboss.com/product/buddypress-member-types/\" "
-"target=\"_blank\">BuddyPress Member Types</a> plugin with BuddyPress, you "
-"should remove it as those features have been merged into BuddyBoss Platform "
-"and greatly improved."
-msgstr ""
-
-#: bp-core/admin/templates/about-buddyboss.php:68
-msgid "5. Network Search"
-msgstr ""
-
-#: bp-core/admin/templates/about-buddyboss.php:69
-msgid ""
-"We have added a native search component. Your members can now search "
-"content across the entire network, including members, groups, forums, "
-"custom post types and more. If you were previously using <a "
-"href=\"https://wordpress.org/plugins/buddypress-global-search/\" "
-"target=\"_blank\">BuddyPress Global Search</a> plugin with BuddyPress, you "
-"should remove it as those features have been merged into BuddyBoss Platform "
-"and greatly improved."
-msgstr ""
-
-#: bp-core/admin/templates/about-buddyboss.php:71
-msgid "6. Email Invites"
-msgstr ""
-
-#: bp-core/admin/templates/about-buddyboss.php:72
-msgid ""
-"We have added a native email invitation component. Your members can now "
-"invite outside users to your community. The recipients will receive an "
-"email with a link to join the site."
-msgstr ""
-
-#: bp-core/admin/templates/about-buddyboss.php:74
-msgid "7. Private Network"
-msgstr ""
-
-#: bp-core/admin/templates/about-buddyboss.php:75
-msgid ""
-"We have added a native private network option for your community. With a "
-"single checkbox you can restrict access to all of your content, but still "
-"allow users to register accounts, and allow access to other URLs of your "
-"choice."
-msgstr ""
-
-#: bp-core/admin/templates/about-buddyboss.php:77
-msgid "<strong>Thank you for using BuddyBoss!</strong>"
-msgstr ""
-
-#: bp-core/admin/templates/about-buddyboss.php:87
 msgid "Built by <a href=\"%s\">BuddyBoss</a>."
 msgstr ""
 
@@ -3374,6 +3320,12 @@ msgstr ""
 msgid "Special thanks to these open source projects"
 msgstr ""
 
+#: bp-core/bp-core-admin.php:22
+msgid "Maintenance Release"
+msgid_plural "Maintenance Releases"
+msgstr[0] ""
+msgstr[1] ""
+
 #: bp-core/bp-core-admin.php:23
 msgid "Security Release"
 msgid_plural "Security Releases"
@@ -3390,6 +3342,13 @@ msgstr[1] ""
 #. translators: 1: BuddyPress version number.
 msgid "<strong>Version %1$s</strong> addressed a security issue."
 msgid_plural "<strong>Version %1$s</strong> addressed some security issues."
+msgstr[0] ""
+msgstr[1] ""
+
+#: bp-core/bp-core-admin.php:34
+#. translators: 1: BuddyPress version number, 2: plural number of bugs.
+msgid "<strong>Version %1$s</strong> addressed %2$s bug."
+msgid_plural "<strong>Version %1$s</strong> addressed %2$s bugs."
 msgstr[0] ""
 msgstr[1] ""
 
