--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.3.3\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2020-04-30 08:08:28+00:00\n"
+"POT-Creation-Date: 2020-04-30 16:06:53+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -6258,13 +6258,13 @@ msgstr ""
 
 #: bp-core/deprecated/buddypress/1.5.php:376
 msgid ""
-"%1$s mentioned you in the group \"%2$s\":\n"
-"\n"
-"\"%3$s\"\n"
-"\n"
-"To view and respond to the message, log in and visit: %4$s\n"
-"\n"
-"---------------------\n"
+"%1$s mentioned you in the group \"%2$s\":\r\n"
+"\r\n"
+"\"%3$s\"\r\n"
+"\r\n"
+"To view and respond to the message, log in and visit: %4$s\r\n"
+"\r\n"
+"---------------------\r\n"
 msgstr ""
 
 #: bp-core/deprecated/buddypress/1.6.php:154
@@ -16126,6 +16126,7 @@ msgstr ""
 
 #: bp-templates/bp-nouveau/buddypress/document/create-child-folder.php:98
 #: bp-templates/bp-nouveau/buddypress/document/create-folder.php:92
+#: bp-templates/bp-nouveau/buddypress/document/document-uploader.php:76
 #: bp-templates/bp-nouveau/buddypress/document/edit-child-folder.php:94
 msgid "Previous"
 msgstr ""
@@ -16167,10 +16168,6 @@ msgstr ""
 
 #: bp-templates/bp-nouveau/buddypress/document/document-uploader.php:75
 msgid "Add more documents"
-msgstr ""
-
-#: bp-templates/bp-nouveau/buddypress/document/document-uploader.php:76
-msgid "previous"
 msgstr ""
 
 #: bp-templates/bp-nouveau/buddypress/document/document-uploader.php:77
