--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.3.4\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2020-05-05 05:25:00+00:00\n"
+"POT-Creation-Date: 2020-05-05 05:28:36+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -2798,7 +2798,7 @@ msgid "Re-sync user WordPress data to BuddyBoss profile fields; %s"
 msgstr ""
 
 #: bp-core/admin/bp-core-admin-tools.php:791
-msgid "Update WordPress user display names; %s"
+msgid "Update WordPress user display names&hellip; %s"
 msgstr ""
 
 #: bp-core/admin/bp-core-admin-tools.php:886
@@ -2859,7 +2859,7 @@ msgstr ""
 
 #: bp-core/admin/bp-core-admin-tools.php:1203
 #: bp-core/admin/bp-core-admin-tools.php:1212
-msgid "Members activity favorite updated %s"
+msgid "Update members activity favorites&hellip; %s"
 msgstr ""
 
 #: bp-core/admin/settings/bp-admin-setting-activity.php:76
