--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.3.3\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2020-05-09 18:13:43+00:00\n"
+"POT-Creation-Date: 2020-05-09 18:23:04+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -16079,7 +16079,7 @@ msgstr ""
 #: bp-templates/bp-nouveau/buddypress/document/create-folder.php:61
 #: bp-templates/bp-nouveau/buddypress/document/document-uploader.php:43
 #: bp-templates/bp-nouveau/buddypress/document/edit-child-folder.php:63
-msgid "Search Folder"
+msgid "Search Folders"
 msgstr ""
 
 #: bp-templates/bp-nouveau/buddypress/document/activity-document-folder-move.php:28
@@ -16089,7 +16089,7 @@ msgstr ""
 #: bp-templates/bp-nouveau/buddypress/document/create-folder.php:17
 #: bp-templates/bp-nouveau/buddypress/document/create-folder.php:93
 #: bp-templates/bp-nouveau/buddypress/document/document-uploader.php:48
-msgid "Create Folder"
+msgid "Create new folder"
 msgstr ""
 
 #: bp-templates/bp-nouveau/buddypress/document/activity-document-folder-move.php:29
