--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.3.3\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2020-05-11 20:03:39+00:00\n"
+"POT-Creation-Date: 2020-05-11 20:35:51+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19266,15 +19266,17 @@ msgstr ""
 #. translators: 1: Imagick status, 2: libreoffice status
 msgctxt "extension notification"
 msgid ""
-"Server needs %1$s and %2$s extensions to be activated for the documents "
-"previews."
+"Your server needs %1$s and %2$s installed to enable live previews for PDF "
+"and Word documents (optional). Ask your web host."
 msgstr ""
 
 #: bp-media/bp-media-settings.php:1043 bp-media/bp-media-settings.php:1056
 #. translators: 1: libreoffice status
 #. translators: 1: Imagick status
 msgctxt "extension notification"
-msgid "Server needs %1$s extension to be activated for the documents previews."
+msgid ""
+"Server needs %1$s installed to enable live previews for PDF and Word "
+"documents (optional). Ask your web host."
 msgstr ""
 
 #: bp-members/bp-members-template.php:123
