--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.3.3\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2020-05-12 22:32:24+00:00\n"
+"POT-Creation-Date: 2020-05-12 22:45:29+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3426,7 +3426,7 @@ msgid "Built by <a href=\"%s\">BuddyBoss</a>."
 msgstr ""
 
 #: bp-core/admin/templates/check-document-mime-type.php:26
-msgid "Find your file's MIME Type"
+msgid "Upload a sample file to determine it's MIME Type"
 msgstr ""
 
 #: bp-core/admin/templates/check-document-mime-type.php:33
@@ -14165,7 +14165,7 @@ msgid ""
 msgstr ""
 
 #: bp-media/bp-media-settings.php:1198
-msgid "<a href=\"#\">Documents</a> &#8594; File Extensions"
+msgid "Documents &#8594; File Extensions"
 msgstr ""
 
 #: bp-media/bp-media-settings.php:1240
@@ -14175,7 +14175,7 @@ msgstr ""
 #: bp-media/bp-media-settings.php:1259
 msgid ""
 "Check which file extensions are allowed to be uploaded. Add custom "
-"extensions at the bottom."
+"extensions at the bottom of the table."
 msgstr ""
 
 #: bp-media/classes/class-bp-media-component.php:192
