--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.3.3\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2020-05-15 13:53:01+00:00\n"
+"POT-Creation-Date: 2020-05-15 14:36:05+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3460,20 +3460,24 @@ msgstr ""
 msgid "Choose a file to upload:"
 msgstr ""
 
-#: bp-core/admin/templates/check-document-mime-type.php:36
+#: bp-core/admin/templates/check-document-mime-type.php:35
+msgid "Add file to check MIME Type"
+msgstr ""
+
+#: bp-core/admin/templates/check-document-mime-type.php:37
 msgid "Get MIME Type"
 msgstr ""
 
-#: bp-core/admin/templates/check-document-mime-type.php:41
+#: bp-core/admin/templates/check-document-mime-type.php:42
 msgid "Your uploaded file's MIME type is: "
 msgstr ""
 
-#: bp-core/admin/templates/check-document-mime-type.php:42
+#: bp-core/admin/templates/check-document-mime-type.php:43
 #: bp-media/bp-media-settings.php:1164 bp-media/bp-media-settings.php:1190
 msgid "MIME Type"
 msgstr ""
 
-#: bp-core/admin/templates/check-document-mime-type.php:44
+#: bp-core/admin/templates/check-document-mime-type.php:45
 msgid "Use this MIME type"
 msgstr ""
 
@@ -6321,13 +6325,13 @@ msgstr ""
 
 #: bp-core/deprecated/buddypress/1.5.php:376
 msgid ""
-"%1$s mentioned you in the group \"%2$s\":\n"
-"\n"
-"\"%3$s\"\n"
-"\n"
-"To view and respond to the message, log in and visit: %4$s\n"
-"\n"
-"---------------------\n"
+"%1$s mentioned you in the group \"%2$s\":\r\n"
+"\r\n"
+"\"%3$s\"\r\n"
+"\r\n"
+"To view and respond to the message, log in and visit: %4$s\r\n"
+"\r\n"
+"---------------------\r\n"
 msgstr ""
 
 #: bp-core/deprecated/buddypress/1.6.php:154
