--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.3.5\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2020-05-17 01:48:59+00:00\n"
+"POT-Creation-Date: 2020-05-17 06:07:46+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -18311,7 +18311,7 @@ msgid "Limit results set to certain type(s)."
 msgstr ""
 
 #: bp-members/classes/class-bp-rest-members-endpoint.php:1269
-msgid "Limit results set to a certain XProfile field."
+msgid "Limit results set to a certain xProfile field."
 msgstr ""
 
 #: bp-members/classes/class-bp-rest-members-endpoint.php:1277
