--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.3.5\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2020-05-31 08:00:11+00:00\n"
+"POT-Creation-Date: 2020-05-31 08:02:50+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21877,7 +21877,7 @@ msgstr ""
 
 #: bp-templates/bp-nouveau/includes/document/functions.php:84
 #: bp-templates/bp-nouveau/includes/media/functions.php:102
-msgid "ERROR..."
+msgid "Unable to upload the file"
 msgstr ""
 
 #: bp-templates/bp-nouveau/includes/document/functions.php:85
