--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.3.5\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2020-06-02 11:14:48+00:00\n"
+"POT-Creation-Date: 2020-06-02 11:48:47+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -978,7 +978,7 @@ msgstr ""
 #: bp-core/admin/bp-core-admin-pages.php:312
 #: bp-core/admin/bp-core-admin-pages.php:346
 #: bp-core/deprecated/buddyboss/1.0.php:75
-#: bp-document/bp-document-filters.php:245 bp-forums/admin/replies.php:783
+#: bp-document/bp-document-filters.php:231 bp-forums/admin/replies.php:783
 #: bp-forums/admin/topics.php:827
 #: bp-groups/classes/class-bp-groups-list-table.php:576
 #: bp-invites/bp-invites-admin.php:273
@@ -7353,13 +7353,13 @@ msgstr ""
 
 #: bp-core/deprecated/buddypress/1.5.php:376
 msgid ""
-"%1$s mentioned you in the group \"%2$s\":\n"
-"\n"
-"\"%3$s\"\n"
-"\n"
-"To view and respond to the message, log in and visit: %4$s\n"
-"\n"
-"---------------------\n"
+"%1$s mentioned you in the group \"%2$s\":\r\n"
+"\r\n"
+"\"%3$s\"\r\n"
+"\r\n"
+"To view and respond to the message, log in and visit: %4$s\r\n"
+"\r\n"
+"---------------------\r\n"
 msgstr ""
 
 #: bp-core/deprecated/buddypress/1.6.php:154
@@ -8242,7 +8242,7 @@ msgstr ""
 msgid "Document Folders"
 msgstr ""
 
-#: bp-document/bp-document-filters.php:257
+#: bp-document/bp-document-filters.php:243
 #: bp-templates/bp-nouveau/buddypress/document/activity-entry.php:111
 #: bp-templates/bp-nouveau/buddypress/document/document-entry.php:240
 #: bp-templates/bp-nouveau/includes/document/functions.php:92
@@ -20648,14 +20648,15 @@ msgid "Create new folder"
 msgstr ""
 
 #: bp-templates/bp-nouveau/buddypress/document/activity-entry.php:54
-msgid "Click to view"
+msgid " view"
 msgstr ""
 
 #: bp-templates/bp-nouveau/buddypress/document/activity-entry.php:58
-#: bp-templates/bp-nouveau/includes/messages/ajax.php:535
-#: bp-templates/bp-nouveau/includes/messages/ajax.php:2060
-#. translators: %s: download url
-msgid "Click to Download"
+msgid " Download"
+msgstr ""
+
+#: bp-templates/bp-nouveau/buddypress/document/activity-entry.php:106
+msgid "Click to"
 msgstr ""
 
 #: bp-templates/bp-nouveau/buddypress/document/activity-entry.php:110
@@ -22718,6 +22719,12 @@ msgstr ""
 
 #: bp-templates/bp-nouveau/includes/messages/ajax.php:125
 msgid "Your message could not be sent. Please try again."
+msgstr ""
+
+#: bp-templates/bp-nouveau/includes/messages/ajax.php:535
+#: bp-templates/bp-nouveau/includes/messages/ajax.php:2060
+#. translators: %s: download url
+msgid "Click to Download"
 msgstr ""
 
 #: bp-templates/bp-nouveau/includes/messages/ajax.php:604
