--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.4.2\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2020-06-09 18:21:25+00:00\n"
+"POT-Creation-Date: 2020-06-10 00:15:02+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -22044,7 +22044,7 @@ msgid "Please upload a document before saving."
 msgstr ""
 
 #: bp-templates/bp-nouveau/includes/document/ajax.php:520
-msgid "Please login to create a document."
+msgid "Please login to upload a document."
 msgstr ""
 
 #: bp-templates/bp-nouveau/includes/document/ajax.php:585
