--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.4.3\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2020-06-24 03:00:15+00:00\n"
+"POT-Creation-Date: 2020-06-24 03:11:55+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -22962,7 +22962,7 @@ msgid "There was an error for updating a description. Please try again."
 msgstr ""
 
 #: bp-templates/bp-nouveau/includes/media/ajax.php:916
-msgid "uploaded a media"
+msgid "uploaded an image"
 msgstr ""
 
 #: bp-templates/bp-nouveau/includes/media/functions.php:98
