--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.4.3\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2020-06-24 03:11:55+00:00\n"
+"POT-Creation-Date: 2020-06-24 15:06:56+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -7382,13 +7382,13 @@ msgstr ""
 
 #: bp-core/deprecated/buddypress/1.5.php:376
 msgid ""
-"%1$s mentioned you in the group \"%2$s\":\n"
-"\n"
-"\"%3$s\"\n"
-"\n"
-"To view and respond to the message, log in and visit: %4$s\n"
-"\n"
-"---------------------\n"
+"%1$s mentioned you in the group \"%2$s\":\r\n"
+"\r\n"
+"\"%3$s\"\r\n"
+"\r\n"
+"To view and respond to the message, log in and visit: %4$s\r\n"
+"\r\n"
+"---------------------\r\n"
 msgstr ""
 
 #: bp-core/deprecated/buddypress/1.6.php:154
@@ -20949,7 +20949,7 @@ msgstr ""
 #: bp-templates/bp-nouveau/buddypress/document/create-child-folder.php:25
 #: bp-templates/bp-nouveau/buddypress/document/create-child-folder.php:33
 #: bp-templates/bp-nouveau/buddypress/document/create-folder.php:17
-#: bp-templates/bp-nouveau/buddypress/document/create-folder.php:30
+#: bp-templates/bp-nouveau/buddypress/document/create-folder.php:31
 msgid "Create new folder"
 msgstr ""
 
@@ -21015,20 +21015,26 @@ msgstr ""
 msgid "Enter Folder Title"
 msgstr ""
 
+#: bp-templates/bp-nouveau/buddypress/document/create-folder.php:23
+msgid ""
+"Following special characters are not supported: / \\ : * ? \" < > | [ ] & $ "
+", ."
+msgstr ""
+
 #: bp-templates/bp-nouveau/buddypress/document/document-create-folder.php:25
 msgid "Create"
 msgstr ""
 
 #: bp-templates/bp-nouveau/buddypress/document/document-entry.php:125
 msgid ""
-"Following special characters are not supported:<br/> ' \" \\ * | / > < ? ` "
-"; : {space}"
+"Following special characters are not supported:<br/> ? [ ] / \\\\ = < > : ; "
+", ' \" & $ # * ( ) | ~ ` ! { } % + {space}"
 msgstr ""
 
 #: bp-templates/bp-nouveau/buddypress/document/document-entry.php:127
 msgid ""
-"Following special characters are not supported:<br/> ' \" \\ * | / > < ? ` "
-"; :"
+"Following special characters are not supported:<br/> / \\ : * ? \" < > | [ "
+"] & $ , ."
 msgstr ""
 
 #: bp-templates/bp-nouveau/buddypress/document/document-entry.php:146
